--- a/requirements.html
+++ b/requirements.html
@@ -57,7 +57,7 @@
             <center>
                 <h2>Requirements</h2>
             </center>
-            <center>15 points are required every semester, heres how to get them:</center>
+            <center>15 points are required every semester, here's how to get them:</center>
             <center>Attending a Workshop: 2 points</center>
             <center>Hosting a Workshop: 4 points (or 2 hours)</center>
             <center>Mentoring at an Elementary school: 4 points</center>
